# k8s-manifests-parser

./: .gitignore  README.md  main.py  pyproject.toml
k8s_parser/: __init__.py  index.py  loader.py  models.py  resolvers.py
